fix(checkbox): fix issue with boxshadow not being rendered in contrast mode
- add an outline for @media (forced-colors: active)

--- a/packages/components/src/checkbox/Checkbox.module.css
+++ b/packages/components/src/checkbox/Checkbox.module.css
@@ -8,11 +8,6 @@
   justify-content: center;
   display: flex;
 
-  @media (forced-colors: active) {
-    outline: 3px solid highlight;
-    outline-offset: -2px;
-  }
-
   & svg {
     width: 1rem;
     height: 1rem;
@@ -52,6 +47,14 @@
   &:focus-visible {
     box-shadow: var(--midas-state-focus);
     outline: none;
+  }
+
+  @media (forced-colors: active) {
+    &[data-focus-visible],
+    &:focus-visible {
+      outline: 2px solid;
+      outline-offset: 3px;
+    }
   }
 
   &[data-selected] div,
